--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,29 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.junit.vintage</groupId>
+		    <artifactId>junit-vintage-engine</artifactId>
+		    <version>${junit.vintage.version}</version>
+		    <scope>test</scope>
+		</dependency>
+				
+		
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-all</artifactId>
+		    <version>2.0.2-beta</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>2.7.19</version>
+		    <scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 
 </project>
